--- a/src/css/style.css
+++ b/src/css/style.css
@@ -66,6 +66,7 @@ body {
     padding: 20px;
     border-radius: 10px;
     position: absolute;
+    transition: opacity 0.5s ease-in-out;
 }
 
 .pokemon-slider .poke-list .card.selected {
